Add new HeroIcon component
Add a new HeroIcon component to render Herododicus from a static .png
file, rather than rendering it dynamically. Since this icon appears on
essentially every page, this should make loading it much faster for the
client.

--- a/deploy/webserver/Caddyfile
+++ b/deploy/webserver/Caddyfile
@@ -38,6 +38,8 @@
     }
 
     header /Textures/*  >Cache-Control   "max-age=604800"
+    header /assets/*    >Cache-Control   "max-age=604800"
+
     root * /srv
     {$DEFAULT_SERVER:file_server}
 }
