Configure a Content-Security-Policy for Hagiography.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       DEVELOPMENT: "1"
     volumes:
-      - ../webapp:/srv:rw
+      - ../webapp:/var/opt/webapp:rw
     networks:
       - internal
 
