--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"bootstrap": "5.3.3"
+		"bootstrap": "5.3.3",
+		"bootstrap-icons": "^1.11.3"
 	}
 }
