--- a/deploy/webserver/Caddyfile
+++ b/deploy/webserver/Caddyfile
@@ -37,7 +37,8 @@
         reverse_proxy api.local:8000
     }
 
-    header /Textures/*  >Cache-Control   "max-age=604800"
+    encode zstd gzip
+    header /textures/*  >Cache-Control   "max-age=604800"
     header /assets/*    >Cache-Control   "max-age=604800"
 
     root * /srv
