--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,9 +16,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@popperjs/core": "^2.11.8",
 		"@sveltejs/adapter-static": "^3.0.1",
-		"bootstrap": "5.3.3",
-		"bootstrap-icons": "^1.11.3"
+		"autoprefixer": "^10.4.19",
+		"bootstrap-icons": "^1.11.3",
+		"postcss": "^8.4.38",
+		"tailwindcss": "^3.4.3"
 	}
 }
